--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.2",
     "jwt-decode": "^4.0.0",
-    "pdfjs-dist": "^3.4.120",
+    "pdfjs-dist": "^4.9.155",
     "react": "^18.3.1",
     "react-cookie": "^7.1.4",
-    "react-credit-cards": "^0.8.3",
     "react-dom": "^18.3.1",
     "react-google-multi-lang": "^1.0.6",
     "react-i18next": "^14.1.3",
+    "react-payment-inputs": "^1.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
