--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "ajv": "^8.17.1",
-    "ajv-keywords": "^5.1.0",
     "antd": "^5.18.1",
     "axios": "^1.7.2",
     "google-map-react": "^2.2.1",
@@ -38,7 +36,6 @@
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "^5.0.1",
     "react-svg": "^16.1.34",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
@@ -72,6 +69,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
+    "react-scripts": "^5.0.1"
   }
 }
